--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altgraph==0.17.4
 numpy==2.1.0
 packaging==25.0
 pefile==2023.2.7
-pillow==10.4.0
+pillow==11.3.0
 pyinstaller==6.15.0
 pyinstaller-hooks-contrib==2025.8
 PyMuPDF==1.24.9
@@ -10,3 +10,4 @@ PyMuPDFb==1.24.9
 pywin32-ctypes==0.2.3
 setuptools==80.9.0
 sv-ttk==2.6.0
+tkinterdnd2==0.4.3
